--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, user-scaleble=0" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="بهترین کلکسیون و آلبوم ها را از ما خریداری کنید" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
