prepare for deployment

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFE202" />
-    <meta name="description" content="ارائه بهترین و با کیفیت ترین کنسول های موجود" />
+    <meta name="description" content="ارائه بهترین و با کیفیت ترین کلکسیون های موجود" />
 
 
     <title>گالری جعفری</title>
